--- a/Vegetables/Vegetables.csproj
+++ b/Vegetables/Vegetables.csproj
@@ -228,6 +228,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="APIControllers\OrderController.cs" />
     <Compile Include="APIControllers\ProductController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -871,7 +872,7 @@
     <Content Include="Areas\admin\content\fonts\weathericons-regular-webfont.woff2" />
     <Content Include="Areas\admin\Views\HomeAdmin\Index.cshtml" />
     <Content Include="Areas\admin\Views\Shared\_LoginAdmin.cshtml" />
-    <Content Include="Areas\admin\Views\Shared\_KhachHangAdmin.cshtml" />
+    <Content Include="Areas\admin\Views\Shared\_DonDatAdmin.cshtml" />
     <Content Include="Areas\admin\Views\Shared\_ProductAdmin.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
